parslers-benchmark/src/tests/invalid/syntaxErr/function/functionMissingParam.wacc
# program extra missing parameter in function definition

# Output:
# #syntax_error#

# Exit:
# 100

# Program:

begin
  int f(int x, int y,) is
    return 0 
  end
  int x = call f(1,2,3)
end

